Updated project and deps